<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.zyclonite.nassh</groupId>
  <artifactId>nassh-relay</artifactId>
  <version>1.0.8</version>

  <organization>
      <name>zyclonite networx</name>
      <url>https://zyclonite.net/</url>
  </organization>

  <developers>
      <developer>
          <id>zyclonite</id>
          <name>Lukas Prettenthaler</name>
      </developer>
  </developers>

  <properties>
      <vertx.version>3.6.3</vertx.version>
      <vertx.main>${project.groupId}.MainVerticle</vertx.main>
      <docker.group.name>zyclonite</docker.group.name>
      <docker.image>${docker.group.name}/${project.artifactId}:${project.version}</docker.image>
      <docker.push.registry>registry.hub.docker.com</docker.push.registry>
      <docker.push.retries>3</docker.push.retries>
      <docker.autoPull>always</docker.autoPull>
      <maven.compiler.source>1.8</maven.compiler.source>
      <maven.compiler.target>1.8</maven.compiler.target>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <dependencyManagement>
      <dependencies>
          <dependency>
              <groupId>io.vertx</groupId>
              <artifactId>vertx-dependencies</artifactId>
              <version>${vertx.version}</version>
              <type>pom</type>
              <scope>import</scope>
          </dependency>
      </dependencies>
  </dependencyManagement>

  <dependencies>
      <dependency>
          <groupId>io.vertx</groupId>
          <artifactId>vertx-core</artifactId>
      </dependency>
      <dependency>
          <groupId>io.vertx</groupId>
          <artifactId>vertx-web</artifactId>
      </dependency>
      <dependency>
          <groupId>io.vertx</groupId>
          <artifactId>vertx-auth-oauth2</artifactId>
      </dependency>
      <dependency>
          <groupId>ch.qos.logback</groupId>
          <artifactId>logback-classic</artifactId>
          <version>1.2.3</version>
      </dependency>
      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>4.12</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>io.vertx</groupId>
          <artifactId>vertx-unit</artifactId>
          <scope>test</scope>
      </dependency>
  </dependencies>

  <build>
      <plugins>
          <plugin>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.8.0</version>
              <configuration>
                  <source>1.8</source>
                  <target>1.8</target>
              </configuration>
          </plugin>
          <plugin>
              <artifactId>maven-shade-plugin</artifactId>
          </plugin>
          <plugin>
              <groupId>io.fabric8</groupId>
              <artifactId>docker-maven-plugin</artifactId>
          </plugin>
      </plugins>
      <pluginManagement>
          <plugins>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-shade-plugin</artifactId>
                  <version>3.2.0</version>
                  <executions>
                      <execution>
                          <phase>package</phase>
                          <goals>
                              <goal>shade</goal>
                          </goals>
                          <configuration>
                              <transformers>
                                  <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                      <manifestEntries>
                                          <Main-Class>io.vertx.core.Launcher</Main-Class>
                                          <Main-Verticle>${vertx.main}</Main-Verticle>
                                      </manifestEntries>
                                  </transformer>
                              </transformers>
                              <artifactSet/>
                              <outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile>
                          </configuration>
                      </execution>
                  </executions>
              </plugin>
              <plugin>
                  <groupId>io.fabric8</groupId>
                  <artifactId>docker-maven-plugin</artifactId>
                  <version>0.27.2</version>
                  <configuration>
                      <images>
                          <image>
                              <name>${docker.image}</name>
                              <build>
                                  <from>openjdk:11-jre-slim</from>
                                  <user>nobody</user>
                                  <tags>
                                      <tag>latest</tag>
                                      <tag>${project.version}</tag>
                                  </tags>
                                  <workdir>/opt</workdir>
                                  <env>
                                      <JAVA_LOG_LEVEL>INFO</JAVA_LOG_LEVEL>
                                  </env>
                                  <entryPoint>
                                      <shell>exec java -Dvertx.logger-delegate-factory-class-name=io.vertx.core.logging.SLF4JLogDelegateFactory -Droot.level=${JAVA_LOG_LEVEL} --illegal-access=deny -jar ${project.artifactId}-${project.version}-fat.jar -conf config.json -cp .</shell>
                                  </entryPoint>
                                  <runCmds>
                                      <runcmd>chmod -R 777 /opt</runcmd>
                                  </runCmds>
                                  <assembly>
                                      <basedir>/</basedir>
                                      <inline>
                                          <files>
                                              <file>
                                                  <source>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</source>
                                                  <outputDirectory>opt</outputDirectory>
                                                  <fileMode>0755</fileMode>
                                              </file>
                                          </files>
                                          <fileSets>
                                              <fileSet>
                                                  <directory>${project.basedir}/src/docker/</directory>
                                                  <outputDirectory>opt</outputDirectory>
                                                  <fileMode>0755</fileMode>
                                              </fileSet>
                                          </fileSets>
                                      </inline>
                                  </assembly>
                              </build>
                          </image>
                      </images>
                  </configuration>
              </plugin>
          </plugins>
      </pluginManagement>
  </build>
</project>
